	* Fixed a bug in 'SyLwrpServer::sendGpiState()' that failed to cache
	current GPI state.
	* Fixed a bug in 'SyLwrpServer::sendGpiState()' that caused a
	gratutious routing DB save every time GPO state was updated.
2018-10-13 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyGpioServer' that caused locally originated
	GPI events to be processed.
	* Added 'SyRouting::gpoMode()', 'SyRouting::setGpoMode()',
	'SyRouting::gpoSnakeSlot()' and 'SyRouting::setGpoSnakeSlot()'
	methods.
2018-10-14 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyLwrpServer::gpoCfgChanged()' signal.
2018-10-15 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 15:0:0.
	* Incremented the package version to 0.19.0.
2019-02-02 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'SyGpioServer::sendGpo()' method.
2019-02-06 Fred Gleason <fredg@paravelsystems.com>
	* Reverted change to 'SyGpioServer' on 2018-10-13 that suppressed
	reception of locally originated GPI events.
2019-02-06 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyGpioServer' that caused the first GPI event
	sent to have an invalid serial number.
2019-07-23 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyInterfaces::toCidrMask()' method.
	* Added a 'SyInterfaces::fromCidrMask()' method.
2019-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyGpioBundle::invertCode()' static method.
	* Added a 'codeinverttest' test.
2019-07-29 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 16:0:1.
	* Incremented the package version to 0.20.0.
2020-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyLwrpClient' that could cause emission of the
	'SyLwrpClient::connected()' signal to be suppressed after reception
	of a socket error.
2020-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 16:1:1.
	* Incremented the package version to 0.20.1.